[gd_scene load_steps=4 format=3 uid="uid://cw0b2ug4it6ha"]

[ext_resource type="Script" path="res://Script/dice_toss.gd" id="1_d2g0h"]
[ext_resource type="Texture2D" uid="uid://jk6xlefonk1x" path="res://Sprite/DiceD10.png" id="2_wymqb"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6a218"]
friction = 0.8
bounce = 0.35

[node name="DiceD10" type="RigidBody2D" groups=["dice_group"]]
position = Vector2(157, 76)
rotation = -3.16053
collision_layer = 6
collision_mask = 7
mass = 2.0
physics_material_override = SubResource("PhysicsMaterial_6a218")
continuous_cd = 1
contact_monitor = true
script = ExtResource("1_d2g0h")

[node name="SpriteD10" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("2_wymqb")
hframes = 10
frame = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-2.26096, -39.0498, 34.9937, 0.662773, -2.75711, 39.955, -40.0118, 0.242371)
